2000-11-28   Daiki Ueno  <ueno@unixuser.org>

	* luna.el: Don't require `static'.
	(luna-define-class-function): Don't bind colon keywords.

2000-11-21   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-client-set-encoder): New function.
	(sasl-client-set-decoder): New function.
	(sasl-client-encoder): New function.
	(sasl-client-decoder): New function.

	* sasl-digest.el: Require 'cl' when compiling.
	(sasl-digest-md5-signing-encode-magic): New constant.
	(sasl-digest-md5-signing-decode-magic): New constant.
	(sasl-digest-md5-htonl-string): New function.
	(sasl-digest-md5-make-integrity-encoder): New function.
	(sasl-digest-md5-make-integrity-decoder): New function.
	(sasl-digest-md5-ha1): New function.
	(sasl-digest-md5-response-value): Accept the 1st argument `ha1'.
	(sasl-digest-md5-response): Use `sasl-digest-md5-ha1'.
	- Set integrity encoder and decoder of the client.

	* smtp.el: Require `luna'.
	(smtp-read-response): Accept `smtp-connection' object rather than
	process-object.
	(smtp-send-command): Likewise.
	(smtp-send-data): Likewise.

2000-11-12   Daiki Ueno  <ueno@unixuser.org>

	* luna.el (luna-define-method): Clear method cache.
	(luna-apply-generic): New function.
	(luna-define-generic): Use `luna-apply-generic' instead of `luna-send'.

2000-11-12   Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-primitive-data): Use `beginning-of-line' instead of
	`forward-char'.
	(smtp-read-response): Don't bind `case-fold-search'.
	(smtp-send-data): Don't save excursion.

2000-11-10   Daiki Ueno  <ueno@unixuser.org>

	* sasl-digest.el (sasl-digest-md5-challenge): Abolish.
	(sasl-digest-md5-syntax-table): Rename from
	`sasl-digest-md5-parse-digest-challenge-syntax-table'.
	(sasl-digest-md5-parse-string): Rename from
	`sasl-digest-md5-parse-digest-challenge'; only return a property list.
	(sasl-digest-md5-challenge): Abolish.
	(sasl-digest-md5-build-response-value-1): Abolish.
	(sasl-digest-md5-response-value): Define as function.